# mav_fmpc_collision

mav_fmpc_multi_robot/: CMakeLists.txt  package.xml
mav_fmpc_multi_robot/include/mav_fmpc_multi_robot/: ekf_drag_estimator.h  fmpc.h  fmpc_node.h  mpc_queue.h
mav_fmpc_multi_robot/launch/: low_level_control.launch
mav_fmpc_multi_robot/resources/: fmpc_firefly.yaml  fmpc_neo11.yaml
mav_fmpc_multi_robot/solver/qpoases/include/qpOASES/: SQProblem.ipp
mav_fmpc_multi_robot/src/: ekf_drag_estimator.cpp  fmpc.cpp  fmpc_node.cpp  mpc_queue.cpp  robot_collision_detection.cpp  thrust_pub.cpp
mav_fmpc_multi_robot/src/trajectory_publisher/: waypoint_publisher.cpp
mav_low_level_control/: CMakeLists.txt  package.xml
mav_low_level_control/include/mav_low_level_control/: PID_low_level_control.h  PID_low_level_control_node.h  low_level_control.h  low_level_control_node.h
mav_low_level_control/resources/: low_level_control_firefly.yaml  low_level_control_hummingbird.yaml  low_level_control_neo11.yaml  pid_firefly.yaml
mav_low_level_control/src/: low_level_control.cpp  low_level_control_node.cpp  pid_low_level_control.cpp  pid_low_level_control_node.cpp
multi_robot_collision_detection/: CMakeLists.txt  package.xml
multi_robot_collision_detection/include/multi_robot_collision_detection/: multi_robot_collision_detection.h  multi_robot_collision_detection_node.h
multi_robot_collision_detection/launch/: multi_robot_collision_detection.launch
multi_robot_collision_detection/resources/: collision_detection.yaml
multi_robot_collision_detection/src/: multi_robot_collision_detection.cpp  multi_robot_collision_detection_node.cpp
