<?xml version="1.0"?>
<package format="2">
  <name>mav_low_level_control</name>
  <version>0.0.0</version>
  <description>The mav_low_level_control package</description>

  <maintainer email="shravan@todo.todo">shravan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>



  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>asl_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
