<?xml version="1.0"?>
<package format="2">
  <name>multi_robot_collision_detection</name>
  <version>0.0.0</version>
  <description>The multi_robot_collision_detection package</description>
  <maintainer email="shravan@todo.todo">shravan</maintainer>
  <license>TODO</license>
<buildtool_depend>catkin</buildtool_depend>
<buildtool_depend>catkin_simple</buildtool_depend>

 <depend>asl_msgs</depend>
  <depend>catkin_simple</depend>
  <depend>mav_msgs</depend>
  <depend>roscpp</depend>
</package>
